--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,3 +1,5 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 # dependencies
 /node_modules
 /.pnp
@@ -24,7 +26,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
-.env
+.env.local
 
 # vercel
 .vercel
