--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,11 @@
-DATABASE_URL=sqlite:///./invoicing.db
-SECRET_KEY=your-secret-key-change-in-production-use-openssl-rand-hex-32
+# Database
+DATABASE_URL=postgresql://postgres.twfzdqtxulbawjecdrvv:[password]@aws-1-eu-north-1.pooler.supabase.com:6543/postgres
+
+# Security
+SECRET_KEY=your-secret-key-here-change-in-production
+ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=15
 REFRESH_TOKEN_EXPIRE_DAYS=30
-CORS_ORIGINS=http://localhost:3000
+
+# CORS
+CORS_ORIGINS=http://localhost:3000,https://your-app.vercel.app
