--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,24 +10,25 @@
     "export": "next build"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.17.19",
+    "axios": "^1.6.5",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.2.0",
+    "framer-motion": "^10.18.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@tanstack/react-query": "^5.17.19",
-    "axios": "^1.6.5",
-    "framer-motion": "^10.18.0",
-    "recharts": "^2.10.4",
-    "date-fns": "^3.2.0",
     "react-hook-form": "^7.49.3",
-    "clsx": "^2.1.0"
+    "react-window": "^2.2.3",
+    "recharts": "^2.10.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "typescript": "^5.3.3",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
-    "autoprefixer": "^10.4.17"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
