--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,12 +20,14 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-window": "^2.2.3",
-    "recharts": "^2.10.4"
+    "recharts": "^2.10.4",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/react-window": "^1.8.8",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
